# stackit-sdk-python-core

./: Makefile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/stackit/core/: authorization.py  configuration.py  wait.py
src/stackit/core/auth_methods/: key_auth.py  token_auth.py
tests/core/: test_auth.py  test_config.py  test_wait.py
