[project]
name = "stackit-core"
version = "0.0.1"
authors = [
  { name="STACKIT Developer Tools", email="developer-tools@stackit.cloud" },
]
description = "Core functionality for the STACKIT SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.32.3",
    "pyjwt ~= 2.9.0",
    "pydantic ~= 2.9.2",
    "urllib3 >=1.21.1",
    "cryptography ~= 43.0.1"
]

[project.optional-dependencies]
dev = [
    "black >= 24.8.0",
    "pytest ~= 8.3.2",
    "flake8 ~= 7.1.0",
    "flake8-black ~= 0.3.6",
    "flake8-pyproject ~= 1.2.3",    
    "flake8-quotes ~= 3.4.0",
    "flake8-bandit ~= 4.1.1",
    "flake8-bugbear ~= 24.8.19",    
    "flake8-eradicate ~= 1.5.0",    
    "flake8-eol ~= 0.0.8",
    "autoimport ~= 1.6.1",
    "isort ~= 5.13.2",
]

[project.urls]
Homepage = "https://github.com/stackitcloud/stackit-sdk-python-core"
Issues = "https://github.com/stackitcloud/stackit-sdk-python-core/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[tool.black]
line-length = 120
exclude = """
/(
     .eggs
    | .git
    | .hg
    | .mypy_cache
    | .nox
    | .pants.d
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
)/
"""

[tool.isort]
profile = 'black'

[tool.flake8]
exclude= [".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist"]
statistics = true
show-source = false
max-line-length = 120
# E203,W503 and E704 are incompatible with the formatter black
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
ban-relative-imports = true
per-file-ignores = """
    # S101: asserts are fine in tests, tests shouldn't be build optimized
    # S105: hardcoded passwords in tests are fine
    # S106: hardcoded passwords in tests are fine
  ./tests/*: S101,S105,S106,
"""